objects/n2de__cls_Object__c.object
<CustomObject>
    <fields>
        <fullName>n2de__Default_map__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default map</label>
        <referenceTo>n2de__cls_Territory_map__c</referenceTo>
        <relationshipLabel>cls Linked objects</relationshipLabel>
        <relationshipName>cls_Linked_objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>n2de__Filters_json__c</fullName>
        <description>Filters used to choose which map to use for each record</description>
        <label>Filters json</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__For_match__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Object is used for matching but does not mean it is enabled</description>
        <label>For matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__For_territory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Object is used for territory processing but does not mean it is enabled</description>
        <label>For territory processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>n2de__Processing_filter_soql__c</fullName>
        <description>Used to decide whether the record is ready to do matching</description>
        <label>Processing filter soql</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__Processing_filter_ui_config__c</fullName>
        <label>Processing filter ui config</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Classifier object</label>
    <nameField>
        <label>sObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classifier objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>